--- a/Project1/styles.css
+++ b/Project1/styles.css
@@ -1,3 +1,20 @@
 img {
-    max-width: 80%;
+
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 100%;
+}
+
+figcaption {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+
+}
+
+body {
+    background-color: #F1D2C3;
+    width: 800px;
+    margin: auto;
 }
