--- a/Project1/styles.css
+++ b/Project1/styles.css
@@ -1,9 +1,15 @@
+*,
+*:before,
+*:after {
+    box-sizing: border-box;
+}
+
 img {
 
     display: block;
     margin-left: auto;
     width: 100%;
-    align: left;
+
 }
 
 .body-photo {
@@ -12,6 +18,7 @@ img {
     float: right;
     margin: 0 10px 10px 0;
     padding: 5px 0px 20px 20px;
+
 }
 
 
@@ -73,4 +80,14 @@ h3 {
 figcaption {
     font-size: 12px;
     font-style: normal;
+}
+
+.clearfix::before,
+.clearfix::after {
+    content: " ";
+    display: table;
+}
+
+.clearfix::after {
+    clear: both;
 }
