--- a/Project1/styles.css
+++ b/Project1/styles.css
@@ -17,7 +17,7 @@ img {
     margin-right: 80%;
     float: right;
     margin: 0 10px 10px 0;
-    padding: 5px 0px 20px 20px;
+    padding: 5px 0 20px 20px;
 
 }
 
