--- a/Project3/styles.css
+++ b/Project3/styles.css
@@ -4,16 +4,8 @@
     box-sizing: border-box;
 }
 
-
-.timelineitem {
-    width: 375px;
+.timeline {
     margin: 0;
-    margin-left: auto;
-    margin-right: auto;
-}
-
-body {
-    background-color: #EDF0F1;
 }
 
 header {
@@ -24,6 +16,22 @@ header {
     height: auto;
     vertical-align: top;
 }
+
+.timelineitem {
+    width: 375px;
+    margin: 0;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+
+
+
+body {
+    background-color: #EDF0F1;
+}
+
+
 
 h1 {
     font-family: 'Noto Sans', sans-serif;
@@ -52,7 +60,7 @@ figcaption {
 
 img {
 
-    display: block;
+    display: inline-block;
     padding: 10px;
     max-width: 100%;
 }
