--- a/Project3/styles.css
+++ b/Project3/styles.css
@@ -3,64 +3,120 @@
 *::after {
     box-sizing: border-box;
 }
+/* main styles*/
 
-.timeline {
+body {
+    background-color: #DCE7EA;
+    font-family: 'Noto Sans', sans-serif;
     margin: 0;
+    padding: 0;
+
 }
 
 header {
-    background-color: #DCE7EA;
-    border-bottom-style: dotted;
-    border-color: black;
-    max-width: 100%;
-    height: auto;
-    vertical-align: top;
+    background-color: #B74926;
+    font-family: 'Noto Sans', sans-serif;
+    min-width: 375px;
+    height: 50px;
+    position: relative;
+    border-bottom-style: double;
+
+
+
+}
+
+h1 {
+    text-align: center;
+    font-size: 35px;
+}
+
+.containter {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+
 }
 
 .timelineitem {
-    width: 375px;
-    margin: 0;
-    margin-left: auto;
-    margin-right: auto;
-}
 
 
-
-
-body {
-    background-color: #EDF0F1;
-}
-
-
-
-h1 {
-    font-family: 'Noto Sans', sans-serif;
-    font-size: 40px;
-    text-align: center;
-
-}
-
-
-figure {
     display: inline-block;
-    margin: 10%;
-    background-color: #B93226;
-
-
+    height: 300px;
+    margin: 10px;
+    position: relative;
+    width: 300px;
 }
 
-figcaption {
-    font-family: 'Noto Sans', sans-serif;
-    font-size: 9px;
-    padding: 5px;
-
-    background-color: #FFF0A5;
-
+.imgbox {
+    overflow: hidden;
+    position: relative;
 }
 
 img {
-
-    display: inline-block;
-    padding: 10px;
     max-width: 100%;
+    transition: transform 2s;
+
+}
+
+/* hover effect and animation */
+
+.container .timelineitem:hover .imgbox img {
+    transform: scale(1.2);
+
+}
+
+.details {
+    background: rgba(51, 57, 68, 0.8);
+    bottom: 10px;
+    left: 10px;
+    position: absolute;
+    right: 10px;
+    top: 10px;
+    transform: scaleY(0);
+    transition: transform .5s;
+}
+
+.container .timelineitem:hover .details {
+    transform: scaleY(1);
+}
+
+.content {
+    color: #fce8e8;
+    padding: 15px;
+    position: absolute;
+    text-align: center;
+    top: 50%;
+    transform: translateY(-50%);
+}
+
+h2 {
+    color: rgb(255, 219, 219);
+    font-size: 25px;
+    margin: 0;
+    padding: 0;
+}
+
+h3 {
+    color: rgb(255, 219, 219);
+    font-size: 10px;
+    margin: 0;
+    padding: 0;
+}
+
+p {
+    font-size: 13px;
+    margin: 0;
+    padding: 0;
+
+}
+/*media queries*/
+
+@media (min-width: 900px) {
+    .timelineitem {
+        width: 200px;
+        height: 200px;
+    }
+
+
+
 }
