--- a/Project4/styles.css
+++ b/Project4/styles.css
@@ -25,9 +25,7 @@ header {
 }
 
 .logotitle {
-    width: 65%;
-    position: relative;
-    left: 30%;
+    padding: 50px;
 
 }
 
@@ -77,6 +75,7 @@ p {
 
 nav ul {
     margin: 0;
+    margin-top: 10px;
     padding: 0;
     list-style: none;
 }
@@ -98,7 +97,7 @@ nav a {
 form {
     display: inline-block;
     margin: auto;
-    align-content: center;
+
 
 
 
@@ -239,9 +238,7 @@ nav a:hover {
         display: none;
     }
 
-    .logo {
-        left: 3%;
-    }
+
 
     .speakercard {
         width: 20%;
