--- a/Project4/styles.css
+++ b/Project4/styles.css
@@ -5,6 +5,10 @@
 }
 
 /* main styles*/
+.container {
+    width: 100%;
+
+}
 
 body {
     margin: 0;
@@ -14,20 +18,20 @@ body {
 
 header {
     background-color: #363333;
-    text-align: center;
+    /* text-align: center; */
     position: fixed;
     display: flex;
-    flex-direction: row;
+    justify-content: space-between;
+    /* flex-direction: row; */
     margin: auto;
+    align-items: center;
     top: 0;
     z-index: 100;
     width: 100%;
+    max-width: 100vw;
 }
 
-.logotitle {
-    padding: 50px;
 
-}
 
 nav {
     position: absolute;
@@ -46,9 +50,10 @@ nav {
 h1 {
     color: #F6ECE9;
     text-align: center;
-    position: relative;
+    /* position: relative; */
     font-size: 20px;
-    left: 43%;
+    margin: 0;
+    /* left: 43%; */
 }
 
 h2 {
@@ -94,18 +99,27 @@ nav a {
     transition: opacity 150ms ease-in-out;
 }
 
-form {
-    display: inline-block;
-    margin: auto;
-
-
-
+.inputwrapper label {
+    margin-right: 10px;
 
 }
 
+.inputwrapper input {
+    width: 80%;
+}
 
 /*class styles*/
+#contact {
+    margin-top: 100px;
+}
 
+.logotitle {
+    width: 250px;
+    position: relative;
+    left: 25%;
+    margin: 0 0 60px 0;
+
+}
 
 .email {
     font-size: 16px;
@@ -113,19 +127,28 @@ form {
 
 }
 
-.enter {
-    margin-top: 20px;
+i {
+    font-size: 30px;
+    color: red;
+    display: inline;
+    margin-top: 80px;
+}
+
+.fa-twitter,
+.fa-instagram {
+    width: 20%;
+
 
 }
 
 .buytickets {
     text-decoration: none;
     font-size: 15px;
-    position: absolute;
-    bottom: 17px;
+    /* position: absolute; */
+    /* bottom: 17px; */
     color: #F6ECE9;
-    text-align: center;
-    right: 10px;
+    padding-right: 7px;
+    /* right: 10px; */
 
 
 
@@ -140,7 +163,7 @@ form {
 
 .content {
     position: relative;
-    top: 150px;
+    top: 130px;
     margin: 10px;
 
 }
@@ -150,6 +173,7 @@ form {
     width: 50%;
     left: 15%;
     display: inline-block;
+
     margin: 0;
     margin-left: 0;
     margin-bottom: 5px;
@@ -168,10 +192,7 @@ form {
     left: 24%;
 }
 
-button {
-    font-size: 100%;
-    float: right;
-}
+
 
 .button-reset {
     background: transparent;
@@ -185,6 +206,20 @@ button {
 
 }
 
+button {
+    background-color: #363388;
+    float: right;
+
+}
+
+.enter {
+    margin-top: 10px;
+    margin-right: 17px;
+    color: #F6ECE9;
+    background-color: #363388;
+    padding: 5px;
+
+}
 
 
 /* navigation */
@@ -194,10 +229,10 @@ button {
 }
 
 .nav-toggle-label {
-    position: absolute;
+    /* position: absolute; */
     color: #F6ECE9;
-    top: 0;
-    left: 0;
+    /* top: 0;
+    left: 0; */
     margin-left: 10px;
     height: 100%;
     display: flex;
@@ -229,22 +264,24 @@ nav a:hover {
 /* media queries*/
 
 @media (min-width: 800px) {
-
-    body {
-        padding: 100px;
+    .container {
+        width: 75%;
+        margin: 0 auto;
     }
 
     .nav-toggle-label {
         display: none;
     }
 
-
-
-    .speakercard {
-        width: 20%;
-    }
-
     header {
-        width: 40%;
+        display: grid;
+        grid-template-columns: 1fr auto minmax(600px, 1fr) 1fr;
+    }
+}
+
+@media (min-width: 1280px) {
+    .container {
+        width: 50%;
+        margin: 0 auto;
     }
 }
