--- a/Project4/styles.css
+++ b/Project4/styles.css
@@ -4,166 +4,38 @@
     box-sizing: border-box;
 }
 
-/* main styles*/
+:root {
+    --background-color: #363333;
+    --font-color: #F6ECE9;
+    --font-family: 'Heebo', sans-serif;
+}
+
 .container {
     width: 100%;
+
 
 }
 
 body {
     margin: 0;
-    font-family: 'Heebo', sans-serif;
-    background-color: #363333;
+    background: var(--background-color);
+    color: var(--font-color);
+    font-family: var(--font-family);
 }
 
+
 header {
-    background-color: #363333;
-    /* text-align: center; */
+    background: var(--background-color);
+    text-align: center;
     position: fixed;
-    display: flex;
-    justify-content: space-between;
-    /* flex-direction: row; */
-    margin: auto;
-    align-items: center;
     top: 0;
     z-index: 100;
     width: 100%;
-    max-width: 100vw;
 }
-
-
-
-nav {
-    position: absolute;
-    text-align: left;
-    top: 100%;
-    left: 0;
-    background-color: #363388;
-
-    width: 100%;
-    transform: scale(1, 0);
-    transition: transform 250ms ease-in-out;
-    transform-origin: top;
-
-}
-
-h1 {
-    color: #F6ECE9;
-    text-align: center;
-    /* position: relative; */
-    font-size: 20px;
-    margin: 0;
-    /* left: 43%; */
-}
-
-h2 {
-    color: #F6ECE9;
-}
-
-h3 {
-    color: #F6ECE9;
-    margin: 0;
-
-}
-
-
-
-
-
-
-p {
-    font-size: 14px;
-    line-height: 16px;
-    color: #F6ECE9;
-
-}
-
-nav ul {
-    margin: 0;
-    margin-top: 10px;
-    padding: 0;
-    list-style: none;
-}
-
-nav li {
-    margin-bottom: 10px;
-    margin-left: 10px;
-
-}
-
-nav a {
-    color: #F6ECE9;
-    text-decoration: none;
-    font-size: 20px;
-    opacity: 0;
-    transition: opacity 150ms ease-in-out;
-}
-
-.inputwrapper label {
-    margin-right: 10px;
-
-}
-
-.inputwrapper input {
-    width: 80%;
-}
-
-/*class styles*/
-#contact {
-    margin-top: 100px;
-}
-
-.logotitle {
-    width: 250px;
-    position: relative;
-    left: 25%;
-    margin: 0 0 60px 0;
-
-}
-
-.email {
-    font-size: 16px;
-    color: #F6ECE9;
-
-}
-
-i {
-    font-size: 30px;
-    color: red;
-    display: inline;
-    margin-top: 80px;
-}
-
-.fa-twitter,
-.fa-instagram {
-    width: 20%;
-
-
-}
-
-.buytickets {
-    text-decoration: none;
-    font-size: 15px;
-    /* position: absolute; */
-    /* bottom: 17px; */
-    color: #F6ECE9;
-    padding-right: 7px;
-    /* right: 10px; */
-
-
-
-}
-
-.buytickets:hover {
-    color: black;
-}
-
-
-
 
 .content {
     position: relative;
-    top: 130px;
+    top: 150px;
     margin: 10px;
 
 }
@@ -178,6 +50,7 @@ i {
     margin-left: 0;
     margin-bottom: 5px;
     text-align: center;
+
 }
 
 .speaker-photo {
@@ -192,64 +65,153 @@ i {
     left: 24%;
 }
 
-
-
-.button-reset {
-    background: transparent;
-    border: 0;
-    cursor: pointer;
-    font-family: inherit;
-    font-size: inherit;
-    font-weight: inherit;
-    padding: 0;
-    text-align: inherit;
-
+.logo {
+    color: var(--font-color);
+    font-size: 1em;
+    font-family: var(--font-family);
 }
 
-button {
-    background-color: #363388;
-    float: right;
+h2 {
 
+    font-size: 30px;
+    width: 10%;
 }
 
-.enter {
-    margin-top: 10px;
-    margin-right: 17px;
-    color: #F6ECE9;
-    background-color: #363388;
-    padding: 5px;
+h3 {
+    color: var(--font-color);
+
+    margin: 0;
+    font-size: 20px;
+}
+
+h4 {
+    color: var(--font-color);
+
 
 }
 
 
-/* navigation */
+h4 {
+    color: var(--font-color);
+    margin: 0;
+    padding-bottom: 10px;
+    font-size: 12px;
+
+}
+
+
+
+
+p {
+    font-size: 17px;
+    line-height: 20px;
+    color: var(--font-color);
+
+}
+
+
 
 .nav-toggle {
     display: none;
 }
 
 .nav-toggle-label {
-    /* position: absolute; */
-    color: #F6ECE9;
-    /* top: 0;
-    left: 0; */
-    margin-left: 10px;
+    position: absolute;
+    top: 0;
+    left: 0;
+    margin-left: 1em;
     height: 100%;
     display: flex;
     align-items: center;
+    font-family: var(--font-family);
+    font-size: 1rem;
 
 }
 
-.nav-toggle-label:hover {
-    color: black;
+.email {
+    font-size: 16px;
+    color: var(--font-color)
+}
+
+.enter {
+    margin-top: 10px;
+    margin-right: 17px;
+    color: var(--font-color);
+    background-color: #363388;
+    padding: 5px;
+
 }
 
 
 
+#about {
+    padding-bottom: 100px;
+}
 
+#speakers {
+    padding-bottom: 100px;
+}
+
+#schedule {
+    padding-bottom: 100px;
+}
+
+#contact {
+    padding-bottom: 100px;
+}
+
+i {
+    font-size: 30px;
+    color: red;
+    display: inline;
+    margin-bottom: 30px;
+    width: 20%;
+}
+
+
+
+nav {
+    position: absolute;
+    text-align: left;
+    top: 100%;
+    left: 0;
+    background: #363388;
+    width: 100%;
+    transform: scale(1, 0);
+    transform-origin: top;
+    transition: transform 200ms ease-in-out;
+
+}
+
+
+
+nav ul {
+    margin: 0;
+    margin-top: 10px;
+    padding: 0;
+
+    list-style: none;
+
+}
+
+nav li {
+    margin-bottom: 1em;
+    margin-left: 1em;
+
+}
+
+nav a {
+    color: var(--font-color);
+    text-decoration: none;
+    font-size: 1.2rem;
+    opacity: 0;
+    transition: opacity 150ms ease-in-out;
+
+}
 
 nav a:hover {
     color: black;
+
 }
 
 .nav-toggle:checked~nav {
@@ -258,30 +220,79 @@ nav a:hover {
 
 .nav-toggle:checked~nav a {
     opacity: 1;
-    transition: opacity 150ms ease-in-out 250ms;
+    transition: opacity 250ms ease-in-out 250ms;
 }
 
-/* media queries*/
-
 @media (min-width: 800px) {
-    .container {
-        width: 75%;
-        margin: 0 auto;
-    }
-
     .nav-toggle-label {
         display: none;
     }
 
-    header {
-        display: grid;
-        grid-template-columns: 1fr auto minmax(600px, 1fr) 1fr;
-    }
-}
-
-@media (min-width: 1280px) {
-    .container {
+    .content {
         width: 50%;
         margin: 0 auto;
+
+
+    }
+
+
+
+    #about {
+        padding: 40px 0 40px 0;
+    }
+
+    header {
+        display: grid;
+        grid-template-columns: 1fr auto minmax(600px, 3fr) 1fr
+    }
+
+
+
+    .logo {
+        grid-column: 2 / 3;
+        margin-top: 7px;
+        font-size: 1.3em;
+
+    }
+
+    nav {
+        all: unset;
+        grid-column: 3 / 4;
+        display: flex;
+        justify-content: flex-end;
+        align-items: center;
+
+    }
+
+    nav ul {
+        display: flex;
+        justify-content: flex-end;
+    }
+
+    nav li {
+        margin-left: 3em;
+        margin-bottom: 0;
+    }
+
+    nav a {
+        opacity: 1;
+    }
+
+
+}
+
+@media (min-width: 1200px) {
+
+
+    .content {
+        width: 40%;
+    }
+
+    .logo {
+        margin-top: 20px;
+    }
+
+    #about {
+        padding: 80px 0 80px 0;
     }
 }
