--- a/Project4/styles.css
+++ b/Project4/styles.css
@@ -55,11 +55,11 @@ h4 {
 }
 
 
-h4 {
+h5 {
     color: var(--font-color);
     font-size: 12px;
     margin: 0;
-    padding-bottom: 10px;
+    padding-bottom: 5x;
 }
 
 i {
